[PL] Translate Sentinels + migration to lualatex (#56)

--- a/main_en.tex
+++ b/main_en.tex
@@ -2,7 +2,6 @@
 \documentclass[12pt]{article}
 
 % Language setting
-\usepackage[T1]{fontenc}
 \usepackage[english]{babel}
 
 \def\sections{sections}
@@ -14,6 +13,7 @@
 \def\campaignstitle{Campaigns}
 \def\lang_header_adjustment{0px}
 
+\newcommand{\authortext}{By The Community}
 \newcommand{\versionlabel}{Version}
 \newcommand{\versionwarning}{This is an unreleased version built on GitHub from commit}
 
