--- a/main_pl.tex
+++ b/main_pl.tex
@@ -1,7 +1,6 @@
 \documentclass[12pt]{article}
 
 % Languages
-\usepackage[T1]{fontenc}
 \usepackage[polish]{babel}
 
 \def\sections{sections/translated/pl}
@@ -13,6 +12,7 @@
 \def\campaignstitle{Kampanie}
 \def\lang_header_adjustment{0px}
 
+\newcommand{\authortext}{W Wydaniu Społeczności}
 \newcommand{\versionlabel}{Wersja}
 \newcommand{\versionwarning}{To jest nieopublikowana wersja zbudowana na GitHubie z commita}
 
