--- a/metadata.tex
+++ b/metadata.tex
@@ -483,6 +483,8 @@
 
 \include{campaigns/main.tex}
 
+\include{\sections/recommendations.tex}
+
 \include{\sections/credits.tex}
 
 \include{sections/back_cover.tex}
