Global settings for itemize/enumerate

--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -134,7 +134,7 @@ During this scenario:
   \begin{itemize}
     \item \textit{Hoarding Tendency:} At the start of each turn, randomly choose a card from the shuffled pile of discarded artifacts.
       If the artifact is:
-      \begin{itemize}[leftmargin=15pt]
+      \begin{itemize}
         \item A weapon: The Dragon gains one Breath attack that targets three creatures in a row.
           The unit directly hit in the middle suffers full damage, while the units on both sides suffer 3\,\svg{damage-red} less.
         \item A piece of armor, shield, or clothing: The Dragon gains 3\,\svg{defense}, represented with spare Faction cubes.
@@ -333,7 +333,7 @@ During this scenario:
     \item The Faerie Dragon is immune to basic spells.
     \item The Faerie Dragon can cast up to two different spells per battle round.
     \item All spells are displayed visibly next to the combat board:
-      \begin{enumerate}[leftmargin=15pt]
+      \begin{enumerate}
         \item The first spell is \textit{Lightning}.
         \item The second spell is \textit{Cure}.
         \item For the third spell, the Faerie Dragon randomly picks an expert spell from the Spell deck, excluding Map \svg{map} spells.
