--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -107,9 +107,11 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 \begin{itemize}
   \item Enemy armies spawn on a random Obelisk field (use hero miniatures from factions not in play).
   \item Determine which Obelisk field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:
-  \begin{itemize}[leftmargin=15pt]
-    \item[] $+1$/$+1$ = North, $+1$/$-1$ = East
-    \item[] $-1$/$+1$ = West, $-1$/$-1$ = South
+  \begin{itemize}
+    \item $+1$/$+1$ = North
+    \item $+1$/$-1$ = East
+    \item $-1$/$+1$ = West
+    \item $-1$/$-1$ = South
   \end{itemize}
   \item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.
   Rounds 8 and 10 are entirely random.
@@ -149,9 +151,8 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (14, 1.5) {\includegraphics[width=0.4\paperwidth]{\_assets/maps/sentinels.png}};
+  \node at (14, 3) {\includegraphics[width=0.4\paperwidth]{\_assets/maps/sentinels.png}};
 \end{tikzpicture}
-
 
 \vspace*{\fill}
 
