--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -80,10 +80,10 @@ There are undefeated units left in the Titans' Stronghold at the end of Round 16
   \item Remember: the center of VI--VII tile next to all I tiles is the Titans' Stronghold.
   \item No one can enter the Titans' Stronghold until all other VII fields are flagged by any player.
   \item After defeating a level VII neutral army, instead of resolving the field, the player chooses an option three times from the following list (an option may be chosen multiple times):
-    \begin{itemize}[leftmargin=12pt]
-      \item Another player (your choice) gains 5 \svg{gold}
-      \item Another player (your choice) gains 2 \svg{building_materials}
-      \item Another player (your choice) gains 1 \svg{valuables}
+    \begin{itemize}
+      \item Another player (your choice) gains 5\,\svg{gold}
+      \item Another player (your choice) gains 2\,\svg{building_materials}
+      \item Another player (your choice) gains 1\,\svg{valuables}
     \end{itemize}
   Then, flag the VII field with a faction cube.
   (There is no bonus in solo play!)
