--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-09 13:42+0200\n"
+"POT-Creation-Date: 2024-07-16 16:00+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -67,7 +67,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/sentinels.tex:145 clash/the_hunt.tex:43
+#: coops/sentinels.tex:147 clash/the_hunt.tex:43
 #: campaigns/inferno_steadwicks_fall.tex:198
 #: campaigns/inferno_deal_with_the_devil.tex:152 sections/credits.tex:25
 #, no-wrap
@@ -318,18 +318,18 @@ msgid ""
 "pile of discarded Artifacts and shuffle it.  \\end{enumerate} \\medskip "
 "\\textbf{Rules:} \\begin{itemize} \\item \\textit{Hoarding Tendency:} At the "
 "start of each turn, randomly choose a card from the shuffled pile of "
-"discarded artifacts.  If the artifact is: \\begin{itemize}[leftmargin=15pt] "
-"\\item A weapon: The Dragon gains one Breath attack that targets three "
-"creatures in a row.  The unit directly hit in the middle suffers full "
-"damage, while the units on both sides suffer 3\\,\\svg{damage-red} less.  "
-"\\item A piece of armor, shield, or clothing: The Dragon gains 3\\,"
-"\\svg{defense}, represented with spare Faction cubes.  Remove them after "
-"they have absorbed damage.  \\item A trinket: The Azure Dragon roars and "
-"summons an ice storm, causing all creatures to freeze in fear.  This results "
-"in every unit moving only 1 battle tile per round, while the Azure Dragon "
-"can fly to any tile on the combat board.  \\end{itemize} \\item The Azure "
-"Dragon is immune to all spells cast against it.  \\item Buffs and "
-"enhancements cast on player's units remain effective.  \\end{itemize} }"
+"discarded artifacts.  If the artifact is: \\begin{itemize} \\item A weapon: "
+"The Dragon gains one Breath attack that targets three creatures in a row.  "
+"The unit directly hit in the middle suffers full damage, while the units on "
+"both sides suffer 3\\,\\svg{damage-red} less.  \\item A piece of armor, "
+"shield, or clothing: The Dragon gains 3\\,\\svg{defense}, represented with "
+"spare Faction cubes.  Remove them after they have absorbed damage.  \\item A "
+"trinket: The Azure Dragon roars and summons an ice storm, causing all "
+"creatures to freeze in fear.  This results in every unit moving only 1 "
+"battle tile per round, while the Azure Dragon can fly to any tile on the "
+"combat board.  \\end{itemize} \\item The Azure Dragon is immune to all "
+"spells cast against it.  \\item Buffs and enhancements cast on player's "
+"units remain effective.  \\end{itemize} }"
 msgstr ""
 
 #. type: Plain text
@@ -487,20 +487,19 @@ msgid ""
 "\\begin{itemize} \\item The Faerie Dragon is immune to basic spells.  \\item "
 "The Faerie Dragon can cast up to two different spells per battle round.  "
 "\\item All spells are displayed visibly next to the combat board: "
-"\\begin{enumerate}[leftmargin=15pt] \\item The first spell is "
-"\\textit{Lightning}.  \\item The second spell is \\textit{Cure}.  \\item For "
-"the third spell, the Faerie Dragon randomly picks an expert spell from the "
-"Spell deck, excluding Map \\svg{map} spells.  If a Map \\svg{map} spell is "
-"picked, draw another spell.  \\end{enumerate} \\item \\textit{Trickster:} In "
-"the first round of the battle, the first targeted Faerie Dragon is a mere "
-"mirage.  It inflicts damage, but disappears from the battlefield when hit by "
-"an enemy.  \\item Dendroids' Ability: Each Dendroid holds a key to the "
-"Faerie Dragon's power.  After the second Dendroid dies, start removing one "
-"spell from the Faerie Dragon's spellbook, beginning with the third spell.  "
-"Decrease the dragon's spell empowerment \\svg{empower} by one (starting from "
-"its maximum) upon vanquishing the 2nd, 3rd, and 4th Dendroids.  When there "
-"are no Dendroids left, the dragon loses the ability to cast spells.  "
-"\\end{itemize} }"
+"\\begin{enumerate} \\item The first spell is \\textit{Lightning}.  \\item "
+"The second spell is \\textit{Cure}.  \\item For the third spell, the Faerie "
+"Dragon randomly picks an expert spell from the Spell deck, excluding Map "
+"\\svg{map} spells.  If a Map \\svg{map} spell is picked, draw another "
+"spell.  \\end{enumerate} \\item \\textit{Trickster:} In the first round of "
+"the battle, the first targeted Faerie Dragon is a mere mirage.  It inflicts "
+"damage, but disappears from the battlefield when hit by an enemy.  \\item "
+"Dendroids' Ability: Each Dendroid holds a key to the Faerie Dragon's power.  "
+"After the second Dendroid dies, start removing one spell from the Faerie "
+"Dragon's spellbook, beginning with the third spell.  Decrease the dragon's "
+"spell empowerment \\svg{empower} by one (starting from its maximum) upon "
+"vanquishing the 2nd, 3rd, and 4th Dendroids.  When there are no Dendroids "
+"left, the dragon loses the ability to cast spells.  \\end{itemize} }"
 msgstr ""
 
 #. type: Plain text
