--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-10 11:52+0200\n"
+"POT-Creation-Date: 2024-07-16 16:00+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -334,7 +334,7 @@ msgid ""
 msgstr ""
 "\\textbf{Runda 6.:}\n"
 "\\begin{itemize}\n"
-"  \\item Usuń wszystkie Czarne Kostki z każdego Wiatraka, Młyna Wodnego i Mistycznego Ogródu na mapie.\n"
+"  \\item Usuń Czarne Kostki z każdego Wiatraka, Młyna Wodnego i Mistycznego Ogródu.\n"
 "  \\item Umieść wrogą armię zgodnie z zasadami poniżej.\n"
 "\\end{itemize}\n"
 "\n"
@@ -434,15 +434,17 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:124
+#: coops/sentinels.tex:126
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Enemy armies spawn on a random Obelisk field (use hero miniatures from factions not in play).\n"
 "  \\item Determine which Obelisk field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:\n"
-"  \\begin{itemize}[leftmargin=15pt]\n"
-"    \\item[] $+1$/$+1$ = North, $+1$/$-1$ = East\n"
-"    \\item[] $-1$/$+1$ = West, $-1$/$-1$ = South\n"
+"  \\begin{itemize}\n"
+"    \\item $+1$/$+1$ = North\n"
+"    \\item $+1$/$-1$ = East\n"
+"    \\item $-1$/$+1$ = West\n"
+"    \\item $-1$/$-1$ = South\n"
 "  \\end{itemize}\n"
 "  \\item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.\n"
 "  Rounds 8 and 10 are entirely random.\n"
@@ -457,11 +459,13 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Wrogie armie pojawiają się na losowym polu z Obeliskiem (użyj figurek bohaterów z frakcji, które nie biorą udziału w grze).\n"
-"  \\item Określ, na którym polu Obelisku poprzez rzut 2 Kośćmi Ataku. Zastosuj wyniki w następujący sposób (K1/K2), przerzuć każde 0:\n"
+"  \\item Wrogie armie pojawiają się na polu z Obeliskiem (użyj figurek bohaterów frakcji, które nie biorą udziału w grze).\n"
+"  \\item Określ, na którym Obelisku poprzez rzut 2 Kośćmi Ataku. Zastosuj wyniki w następujący sposób (K1/K2), przerzuć każde 0:\n"
 "  \\begin{itemize}[leftmargin=15pt]\n"
-"    \\item[] $+1$/$+1$ = Północ, $+1$/$-1$ = Wschód\n"
-"    \\item[] $-1$/$+1$ = Zachód, $-1$/$-1$ = Południe\n"
+"    \\item $+1$/$+1$ = Północ\n"
+"    \\item $+1$/$-1$ = Wschód\n"
+"    \\item $-1$/$+1$ = Zachód\n"
+"    \\item $-1$/$-1$ = Południe\n"
 "  \\end{itemize}\n"
 "  \\item Dla bardziej zbilansowanej dystrybucji, w Rundach 7. i 9., rzuć tylko drugą Kością Ataku (K2). Dla K1, przyjmij przeciwny wynik do tego, który wypadł w poprzedniej Rundzie.\n"
 "  Rundy 8. i 10. są całkowicie losowe.\n"
@@ -476,7 +480,7 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:126
+#: coops/sentinels.tex:128
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Combat with\\\\Enemy Armies}}\n"
@@ -486,7 +490,7 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:134
+#: coops/sentinels.tex:136
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
@@ -503,12 +507,12 @@ msgstr ""
 "  \\item Podczas walki z wrogą armią Bohater może wycofać się, gdy ma zostać aktywowana dowolna jednostka jego armii.\n"
 "    Wycofujący się główny Bohater traci wszystkie pozostałe Punkty Ruchu i wraca do wybranej przez siebie sojuszniczej miasta lub osady, zachowując wszystkie pozostałe jednostki.\n"
 "  \\item Wycofujący się pomocniczy bohaterowie są usuwani z gry, ale ich pozostałe jednostki są zachowane.\n"
-"  \\item Zabite jednostki wroga nie odradzają się.\n"
+"  \\item Zabite wrogie jednostki nie odradzają się.\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:136
+#: coops/sentinels.tex:138
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Boss Army}}\n"
@@ -518,7 +522,7 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:143
+#: coops/sentinels.tex:145
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
@@ -537,7 +541,7 @@ msgstr ""
 "\\end{itemize}\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:145 clash/the_hunt.tex:43
+#: coops/sentinels.tex:147 clash/the_hunt.tex:43
 #: campaigns/inferno_steadwicks_fall.tex:198
 #: campaigns/inferno_deal_with_the_devil.tex:152 sections/credits.tex:25
 #, no-wrap
@@ -547,7 +551,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/sentinels.tex:147 coops/titans_stronghold.tex:105
+#: coops/sentinels.tex:149 coops/titans_stronghold.tex:105
 #: coops/titans_stronghold.tex:111 clash/bloody_grail.tex:123
 #: clash/bloody_grail.tex:129 sections/credits.tex:27 sections/credits.tex:31
 #, no-wrap
@@ -557,19 +561,19 @@ msgid ""
 msgstr ""
 
 #. type: tikzpicture
-#: coops/sentinels.tex:154
+#: coops/sentinels.tex:156
 #, no-wrap
 msgid ""
 "[overlay]\n"
 "  \\centering\n"
-"  \\node at (14, 1.5) {\\includegraphics[width=0.4\\paperwidth]{\\_assets/maps/sentinels.png}};"
+"  \\node at (14, 3) {\\includegraphics[width=0.4\\paperwidth]{\\_assets/maps/sentinels.png}};"
 msgstr ""
 "[overlay]\n"
 "  \\centering\n"
-"  \\node at (14, 6.5) {\\includegraphics[width=0.4\\paperwidth]{\\_assets/maps/sentinels.png}};"
+"  \\node at (14, 6) {\\includegraphics[width=0.4\\paperwidth]{\\_assets/maps/sentinels.png}};"
 
 #. type: Plain text
-#: coops/sentinels.tex:192
+#: coops/sentinels.tex:194
 msgid ""
 "\\hommtable[]{20}{ \\centering \\medskip \\textbf{Strength of Enemy Armies}\\"
 "\\ \\bigskip \\newcommand{\\bronze}[0]{\\svgunit[12]{bronze}} "
@@ -618,7 +622,7 @@ msgstr ""
 "\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 
 #. type: footnotetext{#2}
-#: coops/sentinels.tex:195
+#: coops/sentinels.tex:197
 msgid ""
 "Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is "
 "random\\label{azure}."
