--- a/translations/titans_stronghold.tex/pl.po
+++ b/translations/titans_stronghold.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-10 10:39+0200\n"
+"POT-Creation-Date: 2024-07-16 16:04+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -93,7 +93,7 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:147 coops/titans_stronghold.tex:105
+#: coops/sentinels.tex:149 coops/titans_stronghold.tex:105
 #: coops/titans_stronghold.tex:111 clash/bloody_grail.tex:123
 #: clash/bloody_grail.tex:129 sections/credits.tex:27 sections/credits.tex:31
 #, no-wrap
@@ -373,10 +373,10 @@ msgid ""
 "  \\item Remember: the center of VI--VII tile next to all I tiles is the Titans' Stronghold.\n"
 "  \\item No one can enter the Titans' Stronghold until all other VII fields are flagged by any player.\n"
 "  \\item After defeating a level VII neutral army, instead of resolving the field, the player chooses an option three times from the following list (an option may be chosen multiple times):\n"
-"    \\begin{itemize}[leftmargin=12pt]\n"
-"      \\item Another player (your choice) gains 5 \\svg{gold}\n"
-"      \\item Another player (your choice) gains 2 \\svg{building_materials}\n"
-"      \\item Another player (your choice) gains 1 \\svg{valuables}\n"
+"    \\begin{itemize}\n"
+"      \\item Another player (your choice) gains 5\\,\\svg{gold}\n"
+"      \\item Another player (your choice) gains 2\\,\\svg{building_materials}\n"
+"      \\item Another player (your choice) gains 1\\,\\svg{valuables}\n"
 "    \\end{itemize}\n"
 "  Then, flag the VII field with a faction cube.\n"
 "  (There is no bonus in solo play!)\n"
@@ -401,9 +401,9 @@ msgstr ""
 "  \\item Nie można wejść do Twierdzy Tytanów, dopóki wszystkie inne pola VII nie zostaną oflagowane przez dowolnego gracza.\n"
 "  \\item Po pokonaniu neutralnej armii poziomu VII, zamiast rozpatrywać pole, gracz wybiera trzykrotnie jedną opcję z poniższej listy (opcję można wybrać wielokrotnie):\n"
 "  \\begin{itemize}[leftmargin=12pt]\n"
-"    \\item Inny gracz (twój wybór) zyskuje 5 \\svg{gold}\n"
-"    \\item Inny gracz (twój wybór) zyskuje 2 \\svg{building_materials}\n"
-"    \\item Inny gracz (twój wybór) zyskuje 1 \\svg{valuables}\n"
+"    \\item Inny gracz (twój wybór) zyskuje 5\\,\\svg{gold}\n"
+"    \\item Inny gracz (twój wybór) zyskuje 2\\,\\svg{building_materials}\n"
+"    \\item Inny gracz (twój wybór) zyskuje 1\\,\\svg{valuables}\n"
 "  \\end{itemize}\n"
 "  Następnie, oflaguj pole VII kostką frakcji.\n"
 "  (W grze solo nie ma bonusu!)\n"
