--- a/translations/titans_stronghold.tex/titans_stronghold.tex.pot
+++ b/translations/titans_stronghold.tex/titans_stronghold.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-07-10 10:39+0200\n"
+"POT-Creation-Date: 2024-07-16 16:04+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -81,7 +81,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/sentinels.tex:147 coops/titans_stronghold.tex:105
+#: coops/sentinels.tex:149 coops/titans_stronghold.tex:105
 #: coops/titans_stronghold.tex:111 clash/bloody_grail.tex:123
 #: clash/bloody_grail.tex:129 sections/credits.tex:27 sections/credits.tex:31
 #, no-wrap
@@ -300,10 +300,10 @@ msgid ""
 "  \\item Remember: the center of VI--VII tile next to all I tiles is the Titans' Stronghold.\n"
 "  \\item No one can enter the Titans' Stronghold until all other VII fields are flagged by any player.\n"
 "  \\item After defeating a level VII neutral army, instead of resolving the field, the player chooses an option three times from the following list (an option may be chosen multiple times):\n"
-"    \\begin{itemize}[leftmargin=12pt]\n"
-"      \\item Another player (your choice) gains 5 \\svg{gold}\n"
-"      \\item Another player (your choice) gains 2 \\svg{building_materials}\n"
-"      \\item Another player (your choice) gains 1 \\svg{valuables}\n"
+"    \\begin{itemize}\n"
+"      \\item Another player (your choice) gains 5\\,\\svg{gold}\n"
+"      \\item Another player (your choice) gains 2\\,\\svg{building_materials}\n"
+"      \\item Another player (your choice) gains 1\\,\\svg{valuables}\n"
 "    \\end{itemize}\n"
 "  Then, flag the VII field with a faction cube.\n"
 "  (There is no bonus in solo play!)\n"
