--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -440,18 +440,18 @@ msgstr ""
 "i potasuj go. \\end{enumerate} \\medskip \\textbf{Zasady:} \\begin{itemize} "
 "\\item \\textit{Skłonność do Gromadzenia:} Na początku każdej tury losowo "
 "wybierz kartę z potasowanego stosu odrzuconych Artefaktów. Jeśli Artefakt "
-"to: \\begin{itemize} \\item Broń: Smok zyskuje atak "
-"zionięciem, który omiata trzy stworzeniach w rzędzie. Jednostka bezpośrednio "
-"trafiona w środku otrzymuje pełne obrażenia, podczas gdy Jednostki po obu "
-"stronach cierpią o 3\\,\\svg{damage-red} mniej. \\item Część zbroi, tarcza "
-"lub odzież: Smok zyskuje 3\\,\\svg{defense}, oznaczane przez wolne Kostki "
-"Frakcji. Usuń je po wchłonięciu obrażeń. \\item Bibelot: Błękitny Smok ryczy "
-"i przywołuje burzę lodową, powodującą zamarzanie wszystkich istot z "
-"przerażenia. Skutkuje to tym, że każda Jednostka porusza się tylko o 1 pole "
-"na rundę, podczas gdy Błękitny Smok może latać na dowolne pole na planszy. "
-"\\end{itemize} \\item Błękitny Smok jest odporny na wszystkie rzucone "
-"przeciwko niemu zaklęcia. \\item Wzmocnienia i ulepszenia rzucone na "
-"jednostki gracza pozostają skuteczne. \\end{itemize} }"
+"to: \\begin{itemize} \\item Broń: Smok zyskuje atak zionięciem, który omiata "
+"trzy stworzeniach w rzędzie. Jednostka bezpośrednio trafiona w środku "
+"otrzymuje pełne obrażenia, podczas gdy Jednostki po obu stronach cierpią o "
+"3\\,\\svg{damage-red} mniej. \\item Część zbroi, tarcza lub odzież: Smok "
+"zyskuje 3\\,\\svg{defense}, oznaczane przez wolne Kostki Frakcji. Usuń je po "
+"wchłonięciu obrażeń. \\item Bibelot: Błękitny Smok ryczy i przywołuje burzę "
+"lodową, powodującą zamarzanie wszystkich istot z przerażenia. Skutkuje to "
+"tym, że każda Jednostka porusza się tylko o 1 pole na rundę, podczas gdy "
+"Błękitny Smok może latać na dowolne pole na planszy. \\end{itemize} \\item "
+"Błękitny Smok jest odporny na wszystkie rzucone przeciwko niemu zaklęcia. "
+"\\item Wzmocnienia i ulepszenia rzucone na jednostki gracza pozostają "
+"skuteczne. \\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:172
@@ -729,10 +729,10 @@ msgstr ""
 "\\textbf{Zasady:} \\begin{itemize} \\item Czarodziejski Smok jest odporny na "
 "podstawowe zaklęcia. \\item Czarodziejski Smok może rzucić maksymalnie dwa "
 "różne zaklęcia na rundę walki. \\item Wszystkie zaklęcia są widocznie obok "
-"planszy walki: \\begin{enumerate} \\item Pierwsze zaklęcie "
-"to \\textit{Piorun}. \\item Drugie zaklęcie to \\textit{Wzmocnienie}. \\item "
-"Na trzecie zaklęcie Czarodziejski Smok losowo wybiera Mistrzowskie Zaklęcie "
-"z talii Zaklęć. Jeśli wylosuje Zaklęcie Podróży \\svg{map}, odrzuć je  i "
+"planszy walki: \\begin{enumerate} \\item Pierwsze zaklęcie to "
+"\\textit{Piorun}. \\item Drugie zaklęcie to \\textit{Wzmocnienie}. \\item Na "
+"trzecie zaklęcie Czarodziejski Smok losowo wybiera Mistrzowskie Zaklęcie z "
+"talii Zaklęć. Jeśli wylosuje Zaklęcie Podróży \\svg{map}, odrzuć je  i "
 "wylosuj inne. \\end{enumerate} \\item \\textit{Oszust:} W pierwszej rundzie "
 "walki pierwszy trafiony Czarodziejski Smok to jedynie miraż. Zadaje "
 "obrażenia, ale znika z pola bitwy po trafieniu przez przeciwnika. \\item "
