Make triangle bullet point outline only

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -82,7 +82,7 @@ During this scenario:
 
 \begin{itemize}
   \item When a player Visits an Obelisk, they \textit{must} resolve one of the following effects:
-  \begin{enumerate}
+  \begin{enumerate}[leftmargin=15pt]
     \item \textbf{[Cleanse]} The player receives one of the following boons, depending on how many Obelisks they have Visited:
     \begin{enumerate}
       \item \textbf{[1st Obelisk]} Roll 2 \svg{treasure} and choose 1 to resolve; then, gain \svg{morale_negative}.
