--- a/metadata.tex
+++ b/metadata.tex
@@ -68,7 +68,7 @@
 \setstretch{1}
 
 % Default margins for itemize lists
-\setlist[itemize,enumerate,2]{leftmargin=15pt, label=$\blacktriangleright$}
+\setlist[itemize,enumerate,2]{leftmargin=15pt, label=$\triangleright$}
 
 % Get version from env
 % \getenv{variable_name} just prints the value
