--- a/translations/bloody_grail.tex/pl.po
+++ b/translations/bloody_grail.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-16 16:00+0200\n"
+"POT-Creation-Date: 2024-07-16 16:56+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -298,7 +298,7 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When a player Visits an Obelisk, they \\textit{must} resolve one of the following effects:\n"
-"  \\begin{enumerate}\n"
+"  \\begin{enumerate}[leftmargin=15pt]\n"
 "    \\item \\textbf{[Cleanse]} The player receives one of the following boons, depending on how many Obelisks they have Visited:\n"
 "    \\begin{enumerate}\n"
 "      \\item \\textbf{[1st Obelisk]} Roll 2 \\svg{treasure} and choose 1 to resolve; then, gain \\svg{morale_negative}.\n"
